# ConstraintML

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: carbon_savings_demo.py  execution_strategy_ladder_demo.py  green_trainer_quickstart.py  resource_budget_portability_demo.py
src/constraintml/: __init__.py
src/constraintml/cloud/: __init__.py
src/constraintml/constraints/: __init__.py  parsing.py  spec.py  units.py
src/constraintml/optimization/: __init__.py  carbon.py  engine.py  planner.py  state.py  strategies.py
src/constraintml/optimization/backends/: __init__.py  base.py  pytorch_backend.py
src/constraintml/optimization/telemetry/: __init__.py  base.py  factory.py  nvml.py  simulated.py
src/constraintml/trainers/: __init__.py  base.py  green_trainer.py  smart_trainer.py
tests/: conftest.py  test_carbon_accounting.py  test_carbon_savings_demo.py  test_constraint_parsing.py  test_engine.py  test_planner.py  test_resource_budget_portability_demo.py  test_telemetry_nvml.py  test_telemetry_simulated.py  test_trainers_integration.py
